# odplugins

./: CMakeLists.txt
plugins/uiTraining/: CMakeLists.txt  uitrainingpi.cc  uitrainingwell.cc  uitrainingwell.h
